--- a/style.css
+++ b/style.css
@@ -1,20 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Sono&display=swap');
+
 body{
     background: #000;
     margin: 0;
 }
 
-.container{
-    width: 100%;
-    height: 100vh;
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+nav{
+    width: 90%;
+    font-family: 'Courier New', Courier, monospace;
+
+}
+
+.logo{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.container{
+    width: 100%;
+    height: 65vh;
+    /* background-color: #47e5e8; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+
+}
+
+
+
 
 .illution{
     width: 900px;
-    background: linear-gradient(20deg,rgb(84, 98, 99),rgb(84, 98, 99));
+    /* background: linear-gradient(20deg,rgb(111, 214, 228),rgb(179, 233, 233)); */
+    /* border-top:1px solid #2b2b2b ; */
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -75,11 +108,44 @@ body{
     border: 1px solid #2b2b2b;
     border-radius: 10px;
     
-
-    
-
     position: relative;
 }
+
+.git-userface::before{
+    content: ' ';
+    width: 100%;
+    height: 100%;
+    /* background: #2b2b2b; */
+    border: 1px solid #212121;
+
+    border-radius: 10px;
+
+    filter: blur(1px);
+    
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
+
+.git-userface::after{
+    content: ' ';
+    width: 100%;
+    height: 100%;
+    /* background: #302f2f; */
+    border: 1px solid #414141;
+
+    border-radius: 10px;
+
+    filter: blur(1px);
+    
+    position: absolute;
+    left: 13px;
+    top: 13px;
+
+    z-index: -1;
+}
+
+
 
 .userface-header{
     display: flex;
@@ -154,5 +220,10 @@ body{
 }
 
 .bodytext p{
+    margin: 9px;
     margin-left: 5px;
 }
+
+
+
+
