--- a/style.css
+++ b/style.css
@@ -217,13 +217,59 @@ nav{
     font-size: 5px;
     line-height: 0;
     position: absolute;
+    animation: powershelltext 2s linear infinite;
+
 }
 
 .bodytext p{
     margin: 9px;
     margin-left: 5px;
+
+}
+
+
+@keyframes powershelltext {
+    from{
+        transform: translate(0);
+    }
+    to{
+        transform: translateY(-40%);
+    }
 }
 
 
 
+.bannertext{
+    width: 700px;
+    text-align: center;
+    margin-top: 30px;
+}
 
+.bannertext h3{
+    font-size: 45px;
+
+}
+
+
+button {
+    font-size: 16px;
+    padding: 1em 3.3em;
+    transform: perspective(200px) rotateX(15deg);
+    color: white;
+    font-weight: 900;
+    border: none;
+    border-radius: 5px;
+    background: linear-gradient(0deg, rgba(63,94,251,1) 0%, rgba(70,135,252,1) 100%);
+    box-shadow: rgba(63,94,251,0.2) 0px 40px 29px 0px;
+    will-change: transform;
+    transition: all 0.3s;
+    border-bottom: 2px solid rgba(70,135,252,1);
+  }
+  
+  button:hover {
+    transform: perspective(180px) rotateX(30deg) translateY(2px);
+  }
+  
+  button:active {
+    transform: perspective(170px) rotateX(36deg) translateY(5px);
+  }
