--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Smokum&display=swap');
+
 body{
     background: #000;
     margin: 0;
@@ -261,6 +263,10 @@ nav{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.bannertext p{
+  color: #5e6767;
+}
+
 
 button {
     font-size: 16px;
@@ -291,11 +297,14 @@ button {
     width: 100%;
     height: 20vh;
     background: #000;
+    display: flex;
+    justify-content: end;
   }
 
   .second-section{
     width: 60%;
     margin: 10%;
+    display: grid;
   }
 
   .second-section a{
@@ -318,4 +327,173 @@ button {
 
   .sec-text {
     width: 70%;
+    color: #5e6767;
   }
+
+  
+
+
+  .demosection{
+   width: 100%;
+   height: 100vh;
+   display: flex;
+  }
+
+  .leftdemo{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+
+  }
+
+
+  .imgdemo{
+    width: 100%;
+    height: 700px;
+    /* background: #47e5e8; */
+    display: flex;
+    justify-content: center;
+    align-items: end;
+  }
+
+
+  .decoration1{
+    width: 20px;
+    height: 20px;
+    /* background-color: rgb(255, 255, 61); */
+    background-color: #47e5e8;
+    transform: translateX(-45%) translateY(260%);
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+
+  }
+
+  .mid-line1{
+    width: 2px ;
+    height: 200px;
+    background: #fff;
+    transform: translateX(-45%) translateY(20%);
+  }
+
+  .mid-line2{
+    width: 2px;
+    height: 500px;
+    background-color: #fff;
+    transform: translateX(-45%) translateY(15%);
+
+  }
+
+
+  .rightdemo{
+    width: 50%;
+    display: flex;
+    /* border-left: 1px solid #fff; */
+    justify-content: center;
+  }
+
+  .rightdocumen{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+  }
+
+  .nightdemo-documentation{
+    width: 70%;
+    height: 400px;
+    border: 1px solid #2b2b2b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+  }
+
+  .documenttitle{
+    width: 85%;
+    color: #fff;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    margin-top: 8%;
+    margin-bottom: 10%;
+ 
+  }
+
+ 
+ 
+
+  .documenttitle p{
+    color: #5e6767;
+  }
+
+  .getcode-container{
+    width: 100%;
+    height: 80px;
+    border: 1px solid #2b2b2b;
+    border-left: 0;
+    border-right: 0;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+
+  .getcode{
+    width: 85%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+
+  .getcode a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    margin-left: 10%;
+  }
+
+  .fa-arrow-trend-up{
+    color:yellow;
+  }
+
+
+  .listtable{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .col4{
+    width: 33.333%;
+
+    /* margin-top: 10%; */
+    /* margin-left: 10%; */
+    color: #5e6767;
+    border-right: 1px solid #2b2b2b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  
+  }
+
+  
+/* 
+  .documentation{
+    width: 100px;
+    height: 100px;
+    background-color: #2b2b2b;
+    border: 1px solid #3e3c3c;
+    margin-right: 25%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    }
+
+  .d{
+    font-family: 'Smokum', cursive;
+  } */
+
+  
