--- a/style.css
+++ b/style.css
@@ -356,19 +356,21 @@ button {
     justify-content: end;
     align-items: center;
     flex-direction: column;
+    position: relative;
   }
 
   .moon{
-    transform: translateY(-50%);
-
+    position: absolute;
+    transition: all 5s;
+    top: 0px;
 
   }
 
-  .moonani{
+  /* .moonani{
     animation: moonani 3s linear;
     animation-fill-mode: forwards;
 
-  }
+  } */
   
   
   @keyframes moonani {
