--- a/style.css
+++ b/style.css
@@ -497,7 +497,6 @@ button {
 
   .col4{
     width: 33.333%;
-
     /* margin-top: 10%; */
     /* margin-left: 10%; */
     color: #5e6767;
@@ -509,15 +508,53 @@ button {
   
   }
 
+  .col4 p a{
+    text-decoration: none;
+  }
+
 
 
   .demosection2{
     width: 100%;
     height: 100vh;
     background-color: #000;
+    display: flex;
+    justify-items: center;
+    align-items: end;
   }
 
+
+  .spin{
+    width: 500px;
+    height: 500px;
+    /* background-color: #2b2b2b; */
+    border: 1px solid #414141;
+    border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   
+  .second-circle{
+    width: 400px;
+    height: 400px;
+    /* background: #414141; */
+    border: 1px solid #414141;
+    border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+   .horizontal,.vertical{
+    width: 100px;
+    height: 100%;
+    background-color: #cf0b0b;
+    
+   }
+
 
   
 
