--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ button {
   }
 
   .leftdemo{
-    width: 50%;
+    width: 70%;
     display: flex;
     justify-content: center;
 
@@ -415,7 +415,7 @@ button {
 
 
   .rightdemo{
-    width: 50%;
+    width: 30%;
     display: flex;
     /* border-left: 1px solid #fff; */
     justify-content: center;
@@ -428,6 +428,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: end;
+
+    
   }
 
   .nightdemo-documentation{
@@ -524,37 +526,46 @@ button {
   }
 
 
-  .spin{
-    width: 500px;
-    height: 500px;
-    /* background-color: #2b2b2b; */
-    border: 1px solid #414141;
-    border-radius: 50%;
-
+  .leftdemo{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
   }
   
-  .second-circle{
-    width: 400px;
-    height: 400px;
-    /* background: #414141; */
-    border: 1px solid #414141;
-    border-radius: 50%;
-
+  .diamond{
+    width: 600px;
+    height: 700px;
+    /* background: #2b2b2b; */
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-   .horizontal,.vertical{
-    width: 100px;
-    height: 100%;
-    background-color: #cf0b0b;
-    
-   }
+  .big-circle{
+    width: 100%;
+    height: 100px;
+    border: 1px solid #8e7d7d;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    position: relative;
+  }
+
+  .big-circle::after{
+    content: ' ';
+    width: 60%;
+    height: 60%;
+    border: 1px solid #414141;
+    border-radius: 50%;
+
+    position: absolute;
+    left: 50%;
+    top: -30%;
+
+    transform: translate(-50%);
+  }
 
   
 
