--- a/style.css
+++ b/style.css
@@ -535,7 +535,6 @@ button {
   .diamond{
     width: 600px;
     height: 700px;
-    /* background: #2b2b2b; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -543,12 +542,17 @@ button {
 
   .big-circle{
     width: 100%;
-    height: 100px;
+    height: 0px;
+    background: linear-gradient(rgb(0,0,0),#2b2b2b);
+
     border: 1px solid #8e7d7d;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transform: rotate(30deg);
+    /* transform: perspective(200px) rotateX(10deg) ; */
 
     position: relative;
   }
@@ -562,11 +566,27 @@ button {
 
     position: absolute;
     left: 50%;
-    top: -30%;
+    top: -25%;
 
     transform: translate(-50%);
   }
 
+  .big-circle::before{
+    content: ' ';
+    width: 20px;
+    height: 20px;
+    background-color: #52bcbd;
+    border-radius: 50%;
+
+    position: absolute;
+    top:400px ;
+  }
+
+
+  .demosection3{
+    width: 100%;
+    height: 100vh;
+  }
   
 
    @media only screen and (max-width:1200px){
